# DRBX

./: .gitignore  .pymon  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  PLAN.md  README.md  mkdocs.yml  plan.md  plan_dkx.md  plan_drbx.md  plan_jax_drb.md  pyproject.toml  shifted_torus_parallel_face_audit_n10_corrected.txt  shifted_torus_targeted_face_audit_n10_n14.txt
legacy/: pyproject.toml  system_legacy_full.py
legacy/.github/workflows/: ci.yml
legacy/benchmarks/: bench_hw2d_step.py  check_core_kernels.py  check_drb2d_hermes2_blob_gate.py  check_drb2d_turbulence_stats_gate.py  check_drb_conservative_gate.py  check_fci_drb3d_full_multiphysics_gate.py
legacy/configs/: salpha_es_cold_bouss.toml
legacy/configs/geometry/: axisymmetric_analytic_miller_min.toml  axisymmetric_analytic_xpoint_min.toml  fci_xpoint_analytic_min.toml
legacy/configs/presets/: preset_linear_dirichlet_nonbouss_jacobi.toml
legacy/docs/: figure-guide.md  figures.md  geometry_compare.md  hermes_literal.md  index.md  inputs_outputs.md  options.md  roadmap.md  validation.md
legacy/docs/benchmarks/: open_field_alignment.md
legacy/docs/fci/: index.md  maps.md
legacy/docs/literature/: halpern2013.md
legacy/docs/model/: braginskii.md  drb2d.md
legacy/docs/nonlinear/: algorithms.md  conservative-drb.md  drb2d.md  neutrals.md  performance.md
legacy/docs/theory/: index.md
legacy/examples/: README.md
legacy/examples/01_line/: line_cold_es.py  line_em.py  line_hot_es.py  line_sheath_mpse.py
legacy/examples/02_2d/: drb2d_em.py  drb2d_es.py  drb2d_hot_ion.py  hw2d.py
legacy/examples/03_fci/: fci_drb3d_em_hot.py  fci_drb3d_es.py
legacy/examples/conservation_check/: run.py
legacy/examples/field_aligned_3d/: README.md
legacy/examples/open_field_line/: README.md  axisym_tokamak_bxcv_24x32.npz  axisym_tokamak_bxcv_hermes_norm.npz  axisym_tokamak_from_hermes_short.npz  input.toml  input_tokamak_bxcv_alignment_stage_a.toml  input_tokamak_bxcv_alignment_strict_early.toml  input_tokamak_bxcv_benchmark_alignment.toml  input_tokamak_bxcv_benchmark_alignment_calibrated.toml  input_tokamak_bxcv_benchmark_alignment_calibrated_tuned.toml  input_tokamak_bxcv_benchmark_es_cold.toml  input_tokamak_bxcv_short_align_norm.toml  run.py
legacy/examples/plane_nonlinear/: README.md  input.toml  run.py
legacy/examples/salpha_smoke/: input.toml  run.py
legacy/examples_old/04_closures_transport/: README.md  nonlinear_flux_tube_toggles.py
legacy/examples_old/06_literature_tokamak_sol/: mosetto2012_regime_map.py
legacy/examples_old/08_nonlinear_drb2d/: README.md  drb2d_curvature_benchmarks.py  drb2d_linear_phase_benchmark_em_hot_ion.py  drb2d_movie.py  drb2d_nonbouss_gate.py
legacy/examples_old/08_nonlinear_hw2d/: hw2d_camargo1995_validation.py  hw2d_neutrals_effect.py
legacy/examples_old/09_fci/: fci_curved_map_regression.py  fci_drb3d_full_movie_open_closed.py  fci_drb3d_full_multiphysics_sheath.py  fci_drb3d_full_operator_wallbc_stats.py  fci_drb3d_sheath_budget.py  fci_hello_world.py
legacy/examples_old/10_verification/: drb_operator_split_diagnostics.py
legacy/new_src_removed/: fci3d.py
legacy/new_src_removed/analysis/: plotting.py
legacy/new_src_removed/cli/: main.py
legacy/new_src_removed/models/: cold_ion_drb.py  invariants.py  sheath.py
legacy/new_src_removed/nonlinear/: __init__.py  drb2d_em.py  fd.py  hw2d.py  neutrals.py
legacy/tests/: test_audit_term_alignment_metrics.py  test_benchmark_compare.py  test_benchmark_diagnostics.py  test_braginskii_scalings.py  test_braginskii_terms.py  test_build_benchmark_bundle_script.py  test_curvature_energy_budget.py  test_diamagnetic_terms.py  test_drb2d_branches_smoke.py  test_drb2d_curvature_benchmarks.py  test_drb2d_curvature_benchmarks_hot_em.py  test_drb2d_curvature_proxy_em_hot.py  test_drb2d_em_split_parity.py  test_drb2d_energy_budget.py  test_drb2d_hot_ion_split_parity.py  test_drb2d_linear_phase_match_em.py  test_drb2d_neutrals_exchange.py  test_drb2d_zonal_collapse_gate.py  test_drb_fv_hermes_short_window_gate.py  test_drb_fv_poisson_solver.py  test_drb_fv_poisson_vorticity_guards.py  test_drb_fv_short_window_gate.py  test_drb_fv_term_gates.py  test_drb_operator_split.py  test_em_energy_budget.py  test_energy_budget_new_terms.py  test_energy_budget_remaining_terms.py  test_equilibrium_drive.py  test_exb_poloidal_ddy_scheme.py  test_exb_poloidal_flows.py  test_fci_conservative_gate.py  test_fci_curved_map_regression.py  test_fci_drb3d_full_perp_bc.py  test_fci_drb3d_full_turbulence_regression.py  test_fci_drb3d_sheath_budget.py  test_fci_essos_toroidal_builder.py  test_fci_map_io_roundtrip.py  test_fci_parallel.py  test_fluctuation_diagnostics.py  test_full_stack_em_hot_neutrals.py  (+18 more)
legacy/tools/: build_benchmark_bundle.py  build_hermes_mirror_runtime_fixture.py  calibrate_alignment_loop.py  compare_geometry_coeffs.py  convert_bout_grid_axisymmetric.py  convert_hermes_dump_axisymmetric.py  downsample_axisymmetric_coeffs.py  extract_hermes_rms.py  make_compact_reference_bundle.py  make_movie.py  make_poloidal_movie.py  plot_nonlinear_panel.py  plot_pdf.py  plot_toroidal_slices.py  plot_utils.py  run_staged_benchmark.py  scan_alignment_knob.py
(+1836 files in other folders)
