[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-drb"
version = "1.0.0"
description = "Fresh JAX edge/SOL plasma code with differentiable, hardware-agnostic solver infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jax",
    "diffrax",
    "scipy",
    "equinox",
    "matplotlib",
    "netCDF4",
    "rich",
    "pillow",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
jax-drb = "jax_drb.cli:main"
jax_drb = "jax_drb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"jax_drb.data.atomic_rates" = ["*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: longer-running solver or history tests that are excluded from the default fast research gate",
]

[tool.coverage.run]
branch = true
source = ["src/jax_drb"]

[tool.coverage.report]
show_missing = true
skip_covered = false
