[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-drb"
version = "2.0.0.dev0"
description = "JAX-first edge and scrape-off-layer plasma code with differentiable, hardware-agnostic solver infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jax",
    "scipy",
    "matplotlib",
    "netCDF4",
    "rich",
    "pillow",
    "solvax>=0.7.4",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist"]
docs = ["mkdocs"]
lineax = ["lineax"]

[project.scripts]
jax-drb = "jax_drb.cli:main"
jax_drb = "jax_drb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: longer-running solver or history tests that are excluded from the default fast research gate",
]

[tool.coverage.run]
branch = true
source = ["src/jax_drb"]

[tool.coverage.report]
show_missing = true
skip_covered = false
