[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxdrb"
version = "0.1.0"
description = "JAX-native drift-reduced Braginskii solver with linear and nonlinear edge/SOL capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.30",
  "equinox>=0.11.0",
  "diffrax>=0.6.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "tomli>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "black>=24",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "pymdown-extensions>=10",
]
essos = [
  "essos",
]

[project.scripts]
jaxdrb = "jaxdrb.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = []

[tool.ruff.lint]
ignore = ["E741"]
per-file-ignores = { "examples/**/*.py" = ["E402"] }

[tool.black]
line-length = 100
target-version = ["py310"]
